objects/Default_Package_Quantity__c.object
<CustomObject>
    <description>Stores default values for items included with Copado packages.</description>
    <fields>
        <fullName>Default_Quantity__c</fullName>
        <description>The default quantity that should be assigned to the included product under the parent package product.</description>
        <inlineHelpText>The default quantity that should be assigned to the included product under the parent package product.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Included_Product_Code__c</fullName>
        <description>The Product Code of the &quot;Included Product&quot; or child product.</description>
        <formula>Included_Product__r.ProductCode</formula>
        <inlineHelpText>The Product Code of the &quot;Included Product&quot; or child product.</inlineHelpText>
        <label>Included Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Product which has a default quantity.</description>
        <inlineHelpText>Lookup to the Product which has a default quantity.</inlineHelpText>
        <label>Included Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Default Package Quantities</relationshipLabel>
        <relationshipName>Default_Package_Quantities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Product_Code__c</fullName>
        <description>The Product Code of the &quot;Package Product&quot; or parent product.</description>
        <formula>Package_Product__r.ProductCode</formula>
        <inlineHelpText>The Product Code of the &quot;Package Product&quot; or parent product.</inlineHelpText>
        <label>Package Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Package Product that determines the default quantity.</description>
        <inlineHelpText>The parent Package Product that determines the default quantity.</inlineHelpText>
        <label>Package Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Default Package Quantities (Package Product)</relationshipLabel>
        <relationshipName>Default_Package_Quantities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Default Package Quantity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Package_Product__c</columns>
        <columns>Default_Quantity__c</columns>
        <columns>Included_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Default Package Quantity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Package Quantities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>